--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "enum": "^3.0.3",
     "express": "^4.17.1",
     "mongoose": "^5.9.12",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "nodemon": "^2.0.3"
+    "multer": "^1.4.2"
   }
 }
