--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "cron": "^1.8.2",
     "express": "^4.17.1",
+    "js-yaml": "^3.13.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.12",
+    "mongoose-ttl": "0.0.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "ms": "^2.1.2",
+    "multer": "^1.4.2",
+    "request-promise": "^4.2.5",
+    "swagger-ui-express": "^4.1.4",
+    "trez-sms-client": "^1.0.3"
   }
 }
