--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.12",
+    "mongoose-paginate": "^5.0.3",
+    "mongoose-pagination": "^1.0.0",
     "mongoose-ttl": "0.0.3",
     "morgan": "^1.10.0",
     "ms": "^2.1.2",
