--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
+    "moment-jalaali": "^0.9.2",
     "mongoose": "^5.9.12",
     "mongoose-paginate": "^5.0.3",
     "mongoose-pagination": "^1.0.0",
