--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "express": "^4.17.1",
-    "js-yaml": "^3.13.1",
+    "js-yaml": "^3.14.0",
     "jsonwebtoken": "^8.5.1",
     "moment-jalaali": "^0.9.2",
     "mongoose": "^5.9.12",
@@ -27,6 +27,7 @@
     "ms": "^2.1.2",
     "multer": "^1.4.2",
     "request-promise": "^4.2.5",
+    "sharp": "^0.25.3",
     "swagger-ui-express": "^4.1.4",
     "trez-sms-client": "^1.0.3"
   }
